@@ -1,3 +1,8 @@
+2003-10-06  Borut Razem <borut.razem@siol.net>
+
+	* src/SDCC.lex, src/SDCC.lex: use dbuf for "_asm" definitions;
+	  my_unput() replaced by unput()
+
 2003-10-05 Bernhard Held <bernhard@bernhardheld.de>
 
 	* src/SDCCloop.c (assignmentsToSym, loopInduction): cast argument of
